--- a/app/index.html
+++ b/app/index.html
@@ -438,6 +438,75 @@
         </ul>
       </div>
     </div>
+    <section class="pricing">
+      <div class="container">
+        <h2 class="title pricing__title">
+          Pricing Plans
+        </h2>
+        <div class="pricing__items">
+
+          <ul class="pricing__item">
+            <li class="pricing__item-name">Basic</li>
+            <li class="pricing__item-num"><sup>$</sup>290</li>
+            <li class="pricing__item-li">1 Logo Design</li>
+            <li class="pricing__item-li">1 Website Design</li>
+            <li class="pricing__item-li">1 Domain Free</li>
+            <li class="pricing__item-li">3 Month License</li>
+            <li class="pricing__item-li">1 GB Storage</li>
+            <li class="pricing__item-li">
+              <a class="pricing__item-link" href="#">
+                CHOOSE PLAN
+              </a>
+            </li>
+          </ul>
+          <ul class="pricing__item">
+            <li class="pricing__item-name">Starter</li>
+            <li class="pricing__item-num"><sup>$</sup>500</li>
+            <li class="pricing__item-li">2 Logo Design</li>
+            <li class="pricing__item-li">2 Website Design</li>
+            <li class="pricing__item-li">1 Domain Free</li>
+            <li class="pricing__item-li">6 Month License</li>
+            <li class="pricing__item-li">1 GB Storage</li>
+            <li class="pricing__item-li">
+              <a class="pricing__item-link" href="#">
+                CHOOSE PLAN
+              </a>
+            </li>
+          </ul>
+          <ul class="pricing__item">
+            <li class="pricing__item-name">Professional</li>
+            <li class="pricing__item-num"><sup>$</sup>1500</li>
+            <li class="pricing__item-li">3 Logo Design</li>
+            <li class="pricing__item-li">3 Website Design</li>
+            <li class="pricing__item-li">2 Domain Free</li>
+            <li class="pricing__item-li">12 Month License</li>
+            <li class="pricing__item-li">2 GB Storage</li>
+            <li class="pricing__item-li">
+              <a class="pricing__item-link" href="#">
+                CHOOSE PLAN
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="container">
+        <h2 class="title contact__title">
+          Get in Touch
+        </h2>
+        <div class="contact__inner">
+          <form class="contact__form" action="#"">
+            <input class="contact__form-input" type="text" placeholder="ИМЯ" required>
+            <input class="contact__form-input" type="email" placeholder="EMAIL" required>
+            <textarea class="contact__form-textarea" placeholder="ВАШЕ СООБЩЕНИЕ" required></textarea>
+            <button class="contact__form-btn" type="submit">
+              ОТПРАВИТЬ
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
