--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,13 +88,13 @@
           </h2>
           <div class="about__wrapper-text">
             <p class="about__text">
-              Практика показывает, что большие продажи далеко не всегда зависят от того, сколько вы потратите на продвижение сайта и
-              рекламную кампанию. Значительно сильнее конечный результат зависит от правильной организации кампании. Мы достигаем
-              максимальной эффективности и помогаем сберечь бюджеты наших клиентов, используя стратегический интернет-маркетинг.
+              Practice shows that big sales do not always depend on how much you spend on website promotion and advertising campaign.
+              Much more the end result depends on the correct organization of the campaign. We achieve maximum efficiency and help
+              save our clients' budgets by using strategic Internet marketing.
             </p>
             <p class="about__text">
-              Определяем цели продвижения — что наш клиент хочет получить, когда работа будет сделана. Проводим маркетинговые
-              исследования рынка, целевой аудитории, конкурентной среды. При разработке стратегии учитываем все имеющиеся данные.
+              We define promotion goals - what our client wants to receive when the work is done. We conduct marketing research of the
+              market, target audience, competitive environment. When developing a strategy, we take into account all having data.
             </p>
           </div>
         </div>
@@ -109,11 +109,11 @@
           <div class="expertise__info">
             <div class="expertise__info-item">
               BRANDING
-              <span class="expertise__info-span" style="width: calc(100% - 90%);">90%</span>
+              <span class="expertise__info-span" style="width: calc(100% - 88%);">88%</span>
             </div>
             <div class="expertise__info-item">
               DESIGN
-              <span class="expertise__info-span" style="width: calc(100% - 80%);">80%</span>
+              <span class="expertise__info-span" style="width: calc(100% - 92%);">92%</span>
             </div>
             <div class="expertise__info-item">
               DEVELOPMENT
@@ -122,12 +122,12 @@
           </div>
           <div class="expertise__wrapper-text">
             <p class="expertise__text">
-              В стратегию интернет-маркетинга входит создание имиджевой и рекламной концепции, разработка контент-стратегии,
-              распределение использования различных каналов коммуникации.
+              The Internet marketing strategy includes the creation of an image and advertising concept, the development of a content
+              strategy, and the distribution of the use of various communication channels.
             </p>
             <p class="expertise__text">
-              Реализуем принятую стратегию, отслеживая промежуточные результаты, и корректируя будущие действия с учетом изменений.
-              Главной целью в этом процессе для нас является конечный результат, а не следование планам.
+              We implement the adopted strategy, tracking intermediate results, and adjusting future actions taking into account
+              changes. The main goal in this process for us is the final result, not following the plans.
             </p>
           </div>
         </div>
@@ -137,7 +137,7 @@
               GRAPHIC DESIGN
             </h4>
             <p class="expertise__item-text">
-              Рекламный дизайн, дизайн упаковки, этикетки, листовок, каталогов, разработка презентаций, дизайн выставочных стендов
+              Advertising design, packaging design, labels, leaflets, catalogs, presentation development, exhibition stand design
             </p>
           </div>
           <div class="expertise__item expertise__item--dev">
@@ -145,7 +145,7 @@
               WEB DEVELOPMENT
             </h4>
             <p class="expertise__item-text">
-              Разрабатываем веб сайты от концепции до реализации. Дизайн, верстка, программирование и запуск сайт в сеть
+              We develop websites from concept to implementation. Design, layout, programming and website launch to the net
             </p>
           </div>
           <div class="expertise__item expertise__item--marketing">
@@ -153,7 +153,7 @@
               MARKETING
             </h4>
             <p class="expertise__item-text">
-              Разрабатываем маркетинговое и рекламное продвижение Вашего продукта или услуги под ключ и на любой бюджет.
+              We develop marketing and advertising promotion of your product or service on a turnkey basis and for any budget.
             </p>
           </div>
         </div>
@@ -185,7 +185,7 @@
         </div>
       </div>
       <div class="portfolio__content">
-        <div class="portfolio__item mix category-a">
+        <div class="portfolio__item mix category-c">
           <img class="portfolio__item-img" src="images/portfolio/1.jpg" alt="portfolio images">
           <a class="portfolio__item-link" href="#">
             SHOW PROJECT
@@ -215,7 +215,7 @@
             SHOW PROJECT
           </a>
         </div>
-        <div class="portfolio__item mix category-c">
+        <div class="portfolio__item mix category-a">
           <img class="portfolio__item-img" src="images/portfolio/6.jpg" alt="portfolio images">
           <a class="portfolio__item-link" href="#">
             SHOW PROJECT
@@ -227,7 +227,7 @@
             SHOW PROJECT
           </a>
         </div>
-        <div class="portfolio__item mix category-c">
+        <div class="portfolio__item mix category-a">
           <img class="portfolio__item-img" src="images/portfolio/8.jpg" alt="portfolio images">
           <a class="portfolio__item-link" href="#">
             SHOW PROJECT
@@ -252,17 +252,17 @@
           </h2>
           <div class="magic__wrapper-text">
             <p class="magic__text">
-              Маркетинговое агентство MGN: полный комплекс маркетинговых, рекламных и дизайнерских услуг в Харькове и Украине:
-              маркетинговые исследования рынков, товаров, потребителей, планирование комплекса маркетинга, реклама, проведение
-              рекламных кампаний, брендинг, рекламный дизайн, pr.
+              Marketing agency MGN: a full range of marketing, advertising and design services in Kharkov and Ukraine: marketing
+              research of markets, goods, consumers, marketing mix planning, advertising, advertising campaigns, branding, advertising
+              design, pr.
             </p>
             <p class="magic__text">
-              Нами накоплен немалый опыт работы в реальном бизнесе, в самых различных отраслях – от недвижимости до аптечного и
-              медицинского бизнеса. Мы не просто беремся решать задачи наших клиентов, мы сами вышли из бизнес-среды и понимаем суть
-              бизнес-процессов.
+              We have accumulated considerable experience in real business, in a variety of industries - from real estate to the
+              pharmacy and medical business. We do not just undertake to solve the problems of our clients, we ourselves have come out
+              of the business environment and understand the essence of business processes.
             </p>
             <p class="magic__text">
-              Мы говорим с бизнесом на одном языке!
+              We speak the same language with business!
             </p>
           </div>
         </div>
@@ -270,9 +270,9 @@
     </section>
     <section class="info">
       <blockquote class="blockquote">
-        «Неважно какую историю вы рассказываете, главное – сделайте своего покупателя героем»
+        «No matter what story you're telling, the main thing is – make your customer a hero»
         <span class="blockquote__author">
-          Крис Броган
+          Chris Brogan
         </span>
       </blockquote>
       <div class="info__video">
@@ -283,25 +283,25 @@
       <div class="container">
         <div class="info__numbers">
           <h5 class="info__numbers-item">
-            305
+            320
             <span class="info__numbers-span">
               Web Designs
             </span>
           </h5>
           <h5 class="info__numbers-item">
-            220
+            245
             <span class="info__numbers-span">
               Logo Designs
             </span>
           </h5>
           <h5 class="info__numbers-item">
-            52
+            55
             <span class="info__numbers-span">
               Print Designs
             </span>
           </h5>
           <h5 class="info__numbers-item">
-            88
+            90
             <span class="info__numbers-span">
               Mobile Apps
             </span>
@@ -315,67 +315,64 @@
           <div class="slider-blog__item">
             <a class="slider-blog__item-link" href="#">
               <h3 class="slider-blog__item-title">
-                АНИМИРОВАННЫЙ ЛОГОТИП –
-                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                ANIMATED LOGO – 
+                TREND OR NEED?
               </h3>
             </a>
             <p class="slider-blog__item-descr">
-              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+              What is an animated logo and what are its advantages? And why is it fashionable now? Let's discuss.
             </p>
           </div>
           <div class="slider-blog__item">
             <a class="slider-blog__item-link" href="#">
               <h3 class="slider-blog__item-title">
-                АНИМИРОВАННЫЙ ЛОГОТИП –
-                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                Stylish design –
+                the key to success?
               </h3>
             </a>
             <p class="slider-blog__item-descr">
-              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+              What does modern stylish design look like? Why does your success depend on it? Let's discuss
             </p>
           </div>
           <div class="slider-blog__item">
             <a class="slider-blog__item-link" href="#">
               <h3 class="slider-blog__item-title">
-                АНИМИРОВАННЫЙ ЛОГОТИП –
-                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                Colorful advertising –
+                the key to popularity?
               </h3>
             </a>
             <p class="slider-blog__item-descr">
-              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+              What is this colorful and attractive advertising? And why is it popular now? Let's discuss
             </p>
           </div>
           <div class="slider-blog__item">
             <a class="slider-blog__item-link" href="#">
               <h3 class="slider-blog__item-title">
-                АНИМИРОВАННЫЙ ЛОГОТИП –
-                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                Mobile application – a necessity or extra costs?
               </h3>
             </a>
             <p class="slider-blog__item-descr">
-              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+              What are modern mobile applications? Why is it so necessary today? Let's discuss
             </p>
           </div>
           <div class="slider-blog__item">
             <a class="slider-blog__item-link" href="#">
               <h3 class="slider-blog__item-title">
-                АНИМИРОВАННЫЙ ЛОГОТИП –
-                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                Print design – current or a relic of the past?
               </h3>
             </a>
             <p class="slider-blog__item-descr">
-              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+              What does print design look like today? Why is it still one of the most sought after on the market? Let's discuss
             </p>
           </div>
           <div class="slider-blog__item">
             <a class="slider-blog__item-link" href="#">
               <h3 class="slider-blog__item-title">
-                АНИМИРОВАННЫЙ ЛОГОТИП –
-                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+                Branding – is the most important part of design or not?
               </h3>
             </a>
             <p class="slider-blog__item-descr">
-              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+              How does branding affect the success of your design? Why is this one of the most important things in design? Let's discuss
             </p>
           </div>
         </div>
@@ -388,9 +385,9 @@
         </h2>
         <div class="team__items">
           <div class="team__item">
-            <img class="team__item-img" src="images/team/team-1.jpg" alt="МАКС">
+            <img class="team__item-img" src="images/team/team-1.jpg" alt="MAX">
             <h6 class="team__item-name">
-              МАКС
+              MAX
             </h6>
             <p class="team__item-position">
               CEO
@@ -399,7 +396,7 @@
           <div class="team__item">
             <img class="team__item-img" src="images/team/team-2.jpg" alt="АНЯ">
             <h6 class="team__item-name">
-              АНЯ
+              ANYA
             </h6>
             <p class="team__item-position">
               Co-Founder
@@ -408,7 +405,7 @@
           <div class="team__item">
             <img class="team__item-img" src="images/team/team-3.jpg" alt="МИЛА">
             <h6 class="team__item-name">
-              МИЛА
+              MILA
             </h6>
             <p class="team__item-position">
               Designer
@@ -447,7 +444,7 @@
 
           <ul class="pricing__item">
             <li class="pricing__item-name">Basic</li>
-            <li class="pricing__item-num"><sup>$</sup>290</li>
+            <li class="pricing__item-num"><sup>$</sup>310</li>
             <li class="pricing__item-li">1 Logo Design</li>
             <li class="pricing__item-li">1 Website Design</li>
             <li class="pricing__item-li">1 Domain Free</li>
@@ -464,9 +461,9 @@
             <li class="pricing__item-num pricing__item-num--popular"><sup>$</sup>500</li>
             <li class="pricing__item-li">2 Logo Design</li>
             <li class="pricing__item-li">2 Website Design</li>
-            <li class="pricing__item-li">1 Domain Free</li>
+            <li class="pricing__item-li">3 Domain Free</li>
             <li class="pricing__item-li">6 Month License</li>
-            <li class="pricing__item-li">1 GB Storage</li>
+            <li class="pricing__item-li">3 GB Storage</li>
             <li class="pricing__item-li">
               <a class="pricing__item-link" href="#">
                 CHOOSE PLAN
@@ -476,11 +473,11 @@
           <ul class="pricing__item">
             <li class="pricing__item-name">Professional</li>
             <li class="pricing__item-num"><sup>$</sup>1500</li>
-            <li class="pricing__item-li">3 Logo Design</li>
+            <li class="pricing__item-li">4 Logo Design</li>
             <li class="pricing__item-li">3 Website Design</li>
-            <li class="pricing__item-li">2 Domain Free</li>
+            <li class="pricing__item-li">5 Domain Free</li>
             <li class="pricing__item-li">12 Month License</li>
-            <li class="pricing__item-li">2 GB Storage</li>
+            <li class="pricing__item-li">6 GB Storage</li>
             <li class="pricing__item-li">
               <a class="pricing__item-link" href="#">
                 CHOOSE PLAN
@@ -496,11 +493,11 @@
           Get in Touch
         </h2>
           <form class="contact__form" action="#"">
-            <input class="contact__form-input" type="text" placeholder="ИМЯ" required>
+            <input class="contact__form-input" type="text" placeholder="NAME" required>
             <input class="contact__form-input" type="email" placeholder="EMAIL" required>
-            <textarea class="contact__form-textarea" placeholder="ВАШЕ СООБЩЕНИЕ" required></textarea>
+            <textarea class="contact__form-textarea" placeholder="YOUR MESSAGE" required></textarea>
             <button class="contact__form-btn" type="submit">
-              ОТПРАВИТЬ
+              SEND
             </button>
           </form>
       </div>
@@ -514,13 +511,13 @@
         </a>
         <div class="footer-top__contact">
           <address class="footer-top__contact-address">
-            Украина, Харьков ул. Тобольская, 63
+            Ukraine, Kharkiv, st. Tobolskaya, 80
           </address>
-          <a class="footer-top__contact-phone" href="tel:+3806765252222">
-            (38067) 65 252 222
+          <a class="footer-top__contact-phone" href="tel:+3806769234549">
+            +380 67 69 234 549
           </a>
-          <a class="footer-top__contact-email" href="mailto:info@mail.com">
-            info@mail.com
+          <a class="footer-top__contact-email" href="mailto:d-marketing@gmail.com">
+            d-marketing@gmail.com
           </a>
         </div>
         <ul class="footer-top__social-list">
@@ -562,7 +559,7 @@
     </div>
     <div class="footer-bottom">
       <p class="footer-bottom__copy">
-        @2020 O...Marketing
+        @2023 D...Marketing
       </p>
     </div>
   </footer> 
